feat: translator list page redesigned

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -63,14 +63,12 @@
   "login": "تسجيل الدخول",
   "wellcome": "مرحبا",
   "interpreterList": "قائمة المترجم",
-  "interpreterListDescription": "يمكنك الوصول إلى قائمة المترجمين من الجدول أدناه.",
   "nameSurname": "الاسم الكامل",
   "chooseLanguage": "اختر اللغة",
   "translationLanguage": "لغة الترجمة",
   "contantInformation": "معلومات الاتصال",
-  "beInterpreterDescription": "املأ النموذج أدناه لتكون مترجمًا.",
   "instagram": "إنستغرام",
-  "newTranslatorLinkText": "يمكنك تقديم طلب لمترجم جديد هنا.",
-  "translatorListLinkText": "يمكنك الوصول إلى قائمة المترجمين من هنا.",
+  "beInterpreterDescription": "يمكنك ملء النموذج أدناه لتصبح مترجمًا. يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
+  "interpreterListDescription": "يمكنك الوصول إلى قائمة المترجمين من الجدول أدناه. يمكنك التقدم للحصول على مترجم جديد على https://هنا.",
   "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها"
 }
