--- a/lang/en.json
+++ b/lang/en.json
@@ -45,7 +45,8 @@
   "contact": "Contact",
   "interpreterNameLastName": "Interpreter Name and Last Name",
   "before": "Before",
-  "after": "After","checkYourEmail": "Check your email",
+  "after": "After",
+  "checkYourEmail": "Check your email",
   "verificationMailDelivered": "We sent the verification code to your email address.",
   "verificationCode": "Verification code",
   "enterVerificationCode": "Enter verification code",
@@ -62,14 +63,12 @@
   "login": "Login",
   "wellcome": "Wellcome",
   "interpreterList": "Interpreter List",
-  "interpreterListDescription": "You can access the interpreter list from the table below.",
   "nameSurname": "Name Surname",
   "chooseLanguage": "Choose language",
   "translationLanguage": "Translation Language",
   "contantInformation": "Contact Information",
-  "beInterpreterDescription": "Fill out the form below to be an interpreter.",
   "instagram": "Instagram",
-  "newTranslatorLinkText": "You can apply for a new translator here.",
-  "translatorListLinkText": "You can reach the translator list from here.",
+  "beInterpreterDescription": "You can fill out the form below to become a translator. You can access the list of translators from https://here.",
+  "interpreterListDescription": "You can access the list of translators from the table below. You can apply for a new translator at https://here.",
   "truthAck": "I accept and declare that the information I have given is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and wrong practices, and that I will notify any changes and updates in the information I have given."
 }
