--- a/lang/ru.json
+++ b/lang/ru.json
@@ -63,14 +63,12 @@
   "login": "Авторизоваться",
   "wellcome": "Добро пожаловать",
   "interpreterList": "Список Переводчиков",
-  "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже.",
   "nameSurname": "Имя Фамилия",
   "chooseLanguage": "Выберите язык",
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
-  "beInterpreterDescription": "Заполните форму ниже, чтобы стать переводчиком.",
   "instagram": "Инстаграм",
-  "newTranslatorLinkText": "Вы можете подать заявку на нового переводчика здесь.",
-  "translatorListLinkText": "Вы можете получить список переводчиков отсюда.",
+  "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Вы можете получить доступ к списку переводчиков из https://здесь.",
+  "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже. Вы можете подать заявку на нового переводчика на https://здесь.",
   "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации."
 }
