--- a/lang/tr.json
+++ b/lang/tr.json
@@ -62,15 +62,13 @@
   "alreadyHaveAnAccount": "Zaten bir hesabın var mı? ",
   "login": "Giriş",
   "wellcome": "Hoşgeldin",
-  "interpreterList": "Çevirmenler",
-  "interpreterListDescription": "Çevirmen listesine aşağıdaki tablodan erişebilirsiniz.",
-  "nameSurname": "Ad Soyad",
+  "interpreterList": "Tercüman Listesi",
+  "nameSurname": "İsim & Soyisim",
   "chooseLanguage": "Dil seç",
-  "translationLanguage": "Çeviri Dili",
+  "translationLanguage": "Tercüme Dili",
   "contantInformation": "İletişim Bilgileri",
-  "beInterpreterDescription": "Çevirmen olmak için aşağıdaki formu doldurun.",
   "instagram": "Instagram",
-  "newTranslatorLinkText": "Yeni tercüman başvurusunu buradan yapabilirsiniz.",
-  "translatorListLinkText": "Tercüman listesine buradan ulaşabilirsiniz.",
+  "beInterpreterDescription": "Tercüman olmak için aşağıdaki formu doldurabilirsiniz. Tercüman listesine https://buradan erişebilirsiniz.",
+  "interpreterListDescription": "Tercüman listesine aşağıdaki tablodan erişebilirsiniz. Yeni tercüman başvurusunu https://buradan yapabilirsiniz.",
   "truthAck": "Verdiğim bilgilerin doğru ve teyit edilmiş olduğunu, bilgi kirliliği ve yanlış uygulamalara yol açmamak için gerekli tüm önlem ve tedbirleri aldığımı, vermiş olduğum bilgilerde meydana gelen değişiklik ve güncellemeleri bildireceğimi kabul ve beyan ederim."
 }
