feat: added translator responsibilities body

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -19,7 +19,8 @@
   "thingsToKnow": "ما تحتاج معرفته حول منصة البحث عن المترجم.",
   "becomeVolunteerHeader": "كيف يمكنني أن أصبح مترجما متطوعا؟?",
   "becomeVolunteerBody": "لكي تصبح مترجمًا متطوعًا ، يجب عليك ملء استمارة التسجيل لمنصة البحث عن مترجم ذات الصلة وتحديد المعلومات اللازمة وتجربة الترجمة..",
-  "interpreterResponsibilities": "ما هي المسؤوليات التي تقع على عاتقي عند الترجمة؟?",
+  "interpreterResponsibilitiesHeader": "ما هي المسؤوليات التي تقع على عاتقي عند الترجمة؟?",
+  "interpreterResponsibilitiesBody": "١- العمل التطوعي المبني على الإرادة: يتوقع منك كمترجم العمل بشكل تطوعي دون مطالبة بالأجر. ويعتبر هذا الأمر شائعاً في معظم المؤسسات الإنسانية والمنظمات الخيرية، حيث يتم تقديم الخدمات مجاناً.\r\n\r\n٢- الحساسية والتفهم: عند العمل كمترجم، ستتعامل مع أشخاص يعانون من حالات الطوارئ مثل الاكتئاب والقلق والخوف ولذلك يجب أن تكون حساساً ومتفهماً وتسعى لتقديم أفضل خدمة ممكنة.\r\n\r\n٣- احترام التنوع الثقافي: يجب عدم نسيان أن من تترجم لهم قد يكونون من مختلف الخلفيات الثقافية والدينية. ولذلك يتعين عليك احترام التنوع الثقافي والسعي لفهمه.\r\n\r\n٤- حماية الخصوصية: كمترجم، عليك الالتزام بحماية معلومات المراجعين الشخصية. ويجب استخدام معلومات المراجعين فقط للإجراءات الرسمية وتخزين تلك المعلومات بأمان.\r\n\r\n٥- القيام بترجمة صحيحة ومفهومة : كمترجم، يجب أن تسعى جاهداً لتحويل النص الأصلي باللغة المصدر إلى لغة الهدف بشكل صحيح وفهم بسيط. ويتضمن ذلك اختيار الكلمات الصحيحة والتراكيب النحوية الصحيحة واستخدام اللغة بشكل صحيح.",
   "communicateOtherTranslator": "كيف يمكنني التواصل مع مترجمين آخرين أثناء الترجمة؟?",
   "cantFind": "لم تجد الإجابة التي كنت تبحث عنها?",
   "reachSupport": "يرجى الاتصال بفريق الدعم لدينا.",
