--- a/lang/tr.json
+++ b/lang/tr.json
@@ -19,7 +19,8 @@
   "thingsToKnow": "Tercümanbul platformu hakkında bilmeniz gerekenler.",
   "becomeVolunteerHeader": "Nasıl gönüllü tercüman olabilirim?",
   "becomeVolunteerBody": "Gönüllü tercüman olmak için ilgili Tercümanbul platformunun kayıt formunu doldurup gerekli bilgileri ve tercüme deneyimini belirtmeniz gerekmektedir.",
-  "interpreterResponsibilities": "Tercüme yaparken ne gibi sorumluluklarım var?",
+  "interpreterResponsibilitiesHeader": "Tercüme yaparken ne gibi sorumluluklarım var?",
+  "interpreterResponsibilitiesBody": "1-Gönüllülük esaslı çalışmak: Bir tercüman olarak, ücret talep etmeden gönüllü olarak çalışmanız beklenir. Bu, çoğu yardım kuruluşunun ve insani yardım faaliyetlerinin ücretsiz yapılması nedeniyle doğaldır.\r\n\r\n2-Hassasiyet göstermek: Tercüman olarak çalışırken, depresyon, anksiyete, kaygı, korku gibi acil durumlar yaşayan insanlarla çalışıyorsunuz. Bu nedenle, hassas ve empatik olmanız, mümkün olan en iyi hizmeti sunmanız gerekiyor.\r\n\r\n3-Kültürel farklılıklara saygı göstermek: danışanların, farklı kültürel ve dini geçmişlere sahip olabilecekleri unutulmamalıdır. Bu nedenle, kültürel farklılıklara saygı göstermek ve bunları anlamak için çaba göstermek önemlidir.\r\n\r\n4-Gizlilik koruması: Tercüman olarak, danışanların kişisel bilgilerinin gizliliğini korumakla yükümlüsünüz. Bu nedenle danışanların bilgilerini yalnızca resmi işlemler için kullanmalısınız ve bu bilgileri güvenli bir şekilde saklamalısınız.\r\n\r\n5-Doğru ve anlaşılır çeviri yapmak: Tercüman olarak, çeviri yaparken kaynak dildeki metni hedef dile doğru ve anlaşılır bir şekilde aktarmak için çaba göstermeniz gerekir. Bu, doğru kelime seçimi, dilbilgisi yapısı ve dilin doğru kullanımını içerir.",
   "communicateOtherTranslator": "Tercüme yaparken diğer tercümanlarla nasıl iletişim kurabilirim?",
   "cantFind": "Aradığınız cevabı bulamadınız mı?",
   "reachSupport": "Lütfen destek ekibimize ulaşın.",
