feat: Latest russian translations (#49)

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -48,28 +48,28 @@
   "before": "Назад",
   "after": "Вперёд",
   "checkYourEmail": "Проверьте свою электронную почту",
-  "verificationMailDelivered": "Мы отправили код подтверждения на ваш адрес электронной почты.",
+  "verificationMailDelivered": "Мы отправили код подтверждения на ваю электронную почту.",
   "verificationCode": "Код подтверждения",
   "enterVerificationCode": "Введите код подтверждения",
   "enterTheCode": "Введите код",
-  "returnLogin": "Вернуться на страницу входа",
-  "forgotPassword": "Забыли пароль",
-  "forgotPasswordInfo": "Не волнуйтесь, мы отправим вам шаги для сброса пароля.",
-  "email": "Эл. адрес",
+  "returnLogin": "Вернуться на страницу авторизации",
+  "forgotPassword": "Забыли пароль?",
+  "forgotPasswordInfo": "Не волнуйтесь, мы отправим вам все необходимые шаги для сброса пароля.",
+  "email": "Электронная почта",
   "emailHint": "Ваш адрес электронной почты",
   "resetPassword": "Сброс пароля",
-  "loginWithGoogle": "Войти с помощью Google",
-  "registerWithGoogle": "Зарегистрироваться с помощью Google",
-  "alreadyHaveAnAccount": "Уже есть аккаунт? ",
-  "login": "Авторизоваться",
+  "loginWithGoogle": "Войти через аккаунт Google",
+  "registerWithGoogle": "Зарегистрироваться через Google",
+  "alreadyHaveAnAccount": "У Вас уже есть учётной записи?",
+  "login": "Вход",
   "wellcome": "Добро пожаловать",
   "interpreterList": "Список Переводчиков",
-  "nameSurname": "Имя Фамилия",
+  "nameSurname": "Полное Имя",
   "chooseLanguage": "Выберите язык",
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
   "instagram": "Инстаграм",
-  "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Вы можете получить доступ к списку переводчиков из https://здесь.",
-  "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже. Вы можете подать заявку на нового переводчика на https://здесь.",
+  "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Доступ к списку переводчиков через https://здесь.",
+  "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже. Ссылка для подачи заявки на нового переводчика https://здесь.",
   "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации."
 }
