feat: translator profile page created

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -14,6 +14,7 @@
   "welomeBody": "اعثر على مترجمين بأي لغة بسرعة وسهولة وتواصل معهم مباشرة على منصتنا!",
   "homePage": "الصفحة الرئيسية",
   "beInterpreter": "كن مترجمًا",
+  "translatorProfile": "ملف المترجم",
   "searchInterpreter": "ابحث عن مترجم",
   "fAskedQuestions": "أسئلة مكررة",
   "thingsToKnow": "ما تحتاج معرفته حول منصة البحث عن المترجم.",
@@ -68,8 +69,14 @@
   "chooseLanguage": "اختر اللغة",
   "translationLanguage": "لغة الترجمة",
   "contantInformation": "معلومات الاتصال",
+  "facebook": "فيسبوك",
   "instagram": "إنستغرام",
+  "twitter": "تويتر",
+  "linkedin": "لينكد إن",
   "beInterpreterDescription": "يمكنك ملء النموذج أدناه لتصبح مترجمًا. يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
   "interpreterListDescription": "يمكنك الوصول إلى قائمة المترجمين من الجدول أدناه. يمكنك التقدم للحصول على مترجم جديد على https://هنا.",
-  "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها"
+  "interpreterListDescription2": "يمكنك الوصول إلى قائمة المترجمين من خلال الجدول أدناه. يمكنك مشاهدة ملفك الشخصي https://هنا.",
+  "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها",
+  "yourProfile": "ملفك الشخصي",
+  "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا."
 }
