--- a/lang/ru.json
+++ b/lang/ru.json
@@ -14,6 +14,7 @@
   "welomeBody": "Быстро и легко находите переводчиков любого языка и общайтесь с ними прямо на нашей платформе!",
   "homePage": "Главная",
   "beInterpreter": "Стать Переводчиком",
+  "translatorProfile": "Профиль Переводчика",
   "searchInterpreter": "Найти Переводчика",
   "fAskedQuestions": "Часто задаваемые вопросы",
   "thingsToKnow": "Что вам нужно знать о платформе Tercümanbul.",
@@ -68,8 +69,14 @@
   "chooseLanguage": "Выберите язык",
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
+  "facebook": "Facebook",
   "instagram": "Инстаграм",
+  "twitter": "Твиттер",
+  "linkedin": "Linkedin",
   "beInterpreterDescription": "Вы можете заполнить форму ниже, чтобы стать переводчиком. Доступ к списку переводчиков через https://здесь.",
   "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже. Ссылка для подачи заявки на нового переводчика https://здесь.",
-  "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации."
+  "interpreterListDescription2": "Список переводчиков доступен по ссылке ниже. Профиль можно посмотреть 'здесь'.",
+  "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации.",
+  "yourProfile": "Ваш профиль",
+  "yourProfileDescription": "Доступ к списку переводчиков через https://здесь."
 }
