--- a/lang/ru.json
+++ b/lang/ru.json
@@ -78,5 +78,9 @@
   "interpreterListDescription2": "Список переводчиков доступен по ссылке ниже. Профиль можно посмотреть 'здесь'.",
   "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации.",
   "yourProfile": "Ваш профиль",
-  "yourProfileDescription": "Доступ к списку переводчиков через https://здесь."
+  "yourProfileDescription": "Доступ к списку переводчиков через https://здесь.",
+  "editProfileDescription": "Вы можете обновить свой профиль https://здесь.",
+  "logout": "Выйти",
+  "updateProfile": "Обновить профиль",
+  "save": "Сохранить"
 }
