--- a/lang/ar.json
+++ b/lang/ar.json
@@ -78,5 +78,8 @@
   "interpreterListDescription2": "يمكنك الوصول إلى قائمة المترجمين من خلال الجدول أدناه. يمكنك مشاهدة ملفك الشخصي https://هنا.",
   "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها",
   "yourProfile": "ملفك الشخصي",
-  "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا."
+  "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
+  "editProfileDescription": "يمكنك تحديث ملفك الشخصي من https://هنا.",
+  "logout": "تسجيل الخروج",
+  "save": "حفظ"
 }
